    * Use sysctl on Darwin
    * Compare to Devel::Platform::Info
    * Add CentOS-7.7
    * Add openSUSE Leap 15.1
    * Add Oracle Linux 7.7
    * Add CentOS 8.1
    * It's 2020
    * Add Oracle Linux 7.8
    * Prevent false negative CPANTESTERS fail reports
    * Add CentOS 8.2
    * Add openSUSE-15.2
    * Add CentOS 7.8
    * Add CentOS 7.9
    * Add Oracle Linux 7.9

0.059	- 2019-07-11,  H.Merijn Brand
    * Add CentOS 7.5
    * Add DSM-6.2
    * Add openSUSE-42.3
    * Add openSUSE-15.0
    * Add Mac::OSVersion to Darwin's SEE ALSO
    * It's 2019
    * Add Oracle Linux 7.6
    * Add CentOS 7.6
    * Add Oracle Solaris 11.4
    * Provide cpanfile
    * Add osvers from sw_vers for Darwin

0.058	- 2018-05-01,  H.Merijn Brand
    * Include Windows build number in OS version
    * Git repo has CSV with summary from distrowatch
    * Add openSUSE TumbleWeed 2018-04
    * AUTHOR cannot be a list in old(er) EU::MM
    * Tested on FreeBSD
    * Hostname can be empty

0.057	- 2018-02-11,  H.Merijn Brand
    * Add VERSION_ID to distroname if set
    * Add DragonFly (PR#2 - xenu)
    * Add sysinfo_hash
    * It's 2018
    * Add get_core_count
    * Add CentOS 7.4
    * Makefile.PL dependencies based on EU::MM version (PR#3 - jkeenan)

0.056	- 2017-09-22,  H.Merijn Brand
    * Use Darwin info internally lowercase (RT#97441 from Test::Smoke)
    * Add arm for aarch64 (RT#119691)
    * Add info for Ubuntu-16.04
    * Use lsb_release (command) as fallback
    * Add fedora-27
    * Add tests for Raspbian-9
    * Fix cpu test for armv6 with new cpuinfo format
    * Add s390x support (RT#122772)

0.055	- 2017-05-12,  H.Merijn Brand
    * Make a longer description
    * Chomp entries in internal info (Linux)
    * Add cpu_type and kernel version for Darwin

0.054	- 2017-03-21,  H.Merijn Brand
    * It's 2017
    * Add DSM-6.1
    * Add OpenSUSE 42.2
    * Improve /pro/cpuinfo parsing (RT#120559)
    * Add CentOS 7.3
    * Add Oracle Server 7.2
