@@ -13,6 +13,7 @@
     * Add CentOS 7.8
     * Add CentOS 7.9
     * Add Oracle Linux 7.9
+    * Fix META issue for bugtracker
 
 0.059	- 2019-07-11,  H.Merijn Brand
     * Add CentOS 7.5
